Initial commit: real time price trackerproject added

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+Plan of actions.txt
+price_tracker_notebook.ipynb
+scrape_data/Smartwatches_product_data.csv
+scrape_data/smartphones_product_data.csv
+final_data.csv
+price_tracker.pbix
